# internal/handlers/user.go
@@ -12,6 +12,7 @@ import (
 // @Summary Создание нового пользователя
 // @Description Создание нового пользователя с указанием имени, email, пароля и роли.
 // @Tags Users
+// @Security UserID
 // @Accept  json
 // @Produce  json
 // @Param input body CreateUserInput true "Параметры пользователя"
@@ -29,7 +30,6 @@ func CreateUser(c *gin.Context) {
 		Name:     input.Name,
 		Email:    input.Email,
 		Password: input.Password,
-		Role:     input.Password,
 	}
 
 	if err := config.DB.Create(&user).Error; err != nil {
@@ -42,15 +42,25 @@ func CreateUser(c *gin.Context) {
 
 // GetUsers godoc
 // @Summary Получение списка пользователей
-// @Description Получение списка всех пользователей.
+// @Description Получение списка всех пользователей или отфильтрованных по роли.
 // @Tags Users
+// @Security UserID
 // @Produce  json
+// @Param role query string false "Роль пользователя"
 // @Success 200 {array} models.User
 // @Failure 500 {object} ResponseError "Ошибка при получении списка пользователей"
 // @Router /users [get]
 func GetUsers(c *gin.Context) {
+	role := c.Query("role")
 	var users []models.User
-	config.DB.Find(&users)
+
+	query := config.DB
+	if role != "" {
+		query = query.Where("role = ?", role)
+	}
+
+	query.Find(&users)
+
 	c.JSON(http.StatusOK, users)
 }
 
@@ -58,6 +68,7 @@ func GetUsers(c *gin.Context) {
 // @Summary Обновление пользователя
 // @Description Обновление данных пользователя по его ID.
 // @Tags Users
+// @Security UserID
 // @Accept  json
 // @Produce  json
 // @Param id path int true "ID пользователя"
@@ -91,6 +102,7 @@ func UpdateUser(c *gin.Context) {
 // @Summary Удаление пользователя
 // @Description Удаление пользователя по его ID.
 // @Tags Users
+// @Security UserID
 // @Param id path int true "ID пользователя"
 // @Success 200 {object} ResponseError "Пользователь удален"
 // @Failure 404 {object} ResponseError "Пользователь не найден"
@@ -102,7 +114,39 @@ func DeleteUser(c *gin.Context) {
 		return
 	}
 
-	config.DB.Delete(&user)
+	config.DB.Unscoped().Delete(&user)
 
 	c.JSON(http.StatusOK, ResponseError{Message: "Пользователь удален"})
+}
+
+// UpdateUserRole godoc
+// @Summary Назначить роль пользователю
+// @Description Обновление роли пользователя по ID
+// @Tags Users
+// @Security UserID
+// @Accept json
+// @Produce json
+// @Param id path int true "ID пользователя"
+// @Param input body UpdateUserRoleInput true "Новая роль"
+// @Success 200 {object} models.User
+// @Failure 400 {object} ResponseError "Неверный ввод"
+// @Failure 404 {object} ResponseError "Пользователь не найден"
+// @Router /users/{id}/role [patch]
+func UpdateUserRole(c *gin.Context) {
+	var user models.User
+	if err := config.DB.First(&user, c.Param("id")).Error; err != nil {
+		c.JSON(http.StatusNotFound, ResponseError{Message: "Пользователь не найден"})
+		return
+	}
+
+	var input UpdateUserRoleInput
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, ResponseError{Message: err.Error()})
+		return
+	}
+
+	user.Role = input.Role
+	config.DB.Save(&user)
+
+	c.JSON(http.StatusOK, user)
 }
